--- a/1st-step-setup.yml
+++ b/1st-step-setup.yml
@@ -16,7 +16,7 @@
         url: https://download.docker.com/linux/ubuntu/gpg
     - name: add docker repo
       apt_repository:
-        repo: deb https://download.docker.com/linux/ubuntu jellyfish stable
+        repo: deb https://download.docker.com/linux/ubuntu jammy stable
     - name: install docker 
       apt:
         name: 
